--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -11,10 +11,24 @@
   "basket.delete": "Удалить",
   "article.add": "Добавить",
   "filter.reset": "Сбросить",
+  "filter.search": "Поиск",
+  "filter.category.order": "По порядку",
+  "filter.category.name": "По именованию",
+  "filter.category.price": "Сначала дорогие",
+  "filter.category.age": "Древние",
+  "filter.filter.all": "Все",
   "basket.articles": {
     "one": "товар",
     "few": "товара",
     "many": "товаров",
     "other": "товара"
-  }
+  },
+  "auth.entry": "Вход",
+  "auth.exit": "Выход",
+  "auth.login": "Логин",
+  "auth.password": "Пароль",
+  "auth.enter": "Войти",
+  "profile.title": "Профиль",
+  "profile.name": "Имя",
+  "profile.phone": "Телефон"
 }
